prevent firefox flicker

--- a/FJSHUD/app/styles/leftBar.less
+++ b/FJSHUD/app/styles/leftBar.less
@@ -84,7 +84,7 @@
     moin-height: 50%;
 
 	.ContactList {
-	  flex: 1 1 0;
+	  flex: 1;
 	  -ms-flex: 1 1 auto;
 	  -webkit-flex: 1 1 0;
 	  position: relative;
